Generate processable list of incomplete jobs

--- a/analysis-workflows/notebooks/FindSumerianCheckFolders.ipynb
+++ b/analysis-workflows/notebooks/FindSumerianCheckFolders.ipynb
@@ -12,24 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Configuration\n",
-    "results_folder = '/global/scratch/groups/dh/aanderson/results/'\n",
-    "results_archive_folder = '/global/scratch/groups/dh/aanderson/run_archive/'\n",
+    "results_folder = '/global/scratch/groups/dh/aanderson/results'\n",
     "incomplete_list_path = '/global/scratch/groups/dh/aanderson/incomplete.txt'\n",
-    "complete_list_path = '/global/scratch/groups/dh/aanderson/complete.txt'\n",
-    "\n",
-    "upload_threshold = 10"
+    "complete_list_path = '/global/scratch/groups/dh/aanderson/complete.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +43,34 @@
       "Results_174-183 INCOMPLETE\n",
       "Results_179-183 Complete\n",
       "Results_184-203 INCOMPLETE\n",
-      "[]\n"
+      "Results_204-208 INCOMPLETE\n",
+      "Results_209-223 Complete\n",
+      "Results_224-228 INCOMPLETE\n",
+      "Results_229-273 Complete\n",
+      "Results_274-293 INCOMPLETE\n",
+      "Results_294-313 Complete\n",
+      "Results_314-333 Complete\n",
+      "Results_334-353 INCOMPLETE\n",
+      "Results_354-355 Complete\n",
+      "Results_356-455 INCOMPLETE\n",
+      "Results_456-475 Complete\n",
+      "Results_476-485 Complete\n",
+      "Results_486-495 Complete\n",
+      "Results_496-505 Complete\n",
+      "Results_506-515 Complete\n",
+      "Results_516-535 Complete\n",
+      "Results_536-555 Complete\n",
+      "Results_556-575 INCOMPLETE\n",
+      "Results_576-595 Complete\n",
+      "Results_596-615 INCOMPLETE\n",
+      "Results_616-635 INCOMPLETE\n",
+      "Results_636-655 INCOMPLETE\n",
+      "Results_656-675 Complete\n",
+      "Results_676-695 Complete\n",
+      "Results_696-715 INCOMPLETE\n",
+      "Results_716-735 INCOMPLETE\n",
+      "Results_736-755 INCOMPLETE\n",
+      "[['Results_294-313', 'Results_314-333'], ['Results_456-475', 'Results_476-485', 'Results_486-495', 'Results_496-505', 'Results_506-515', 'Results_516-535', 'Results_536-555'], ['Results_656-675', 'Results_676-695']]\n"
      ]
     }
    ],
@@ -60,6 +84,12 @@
     "results_folders = sorted(listdir(results_folder))\n",
     "for subfolder in results_folders:\n",
     "    contents = listdir(results_folder + '/' + subfolder)\n",
+    "    \n",
+    "    #Ignore jobs that are in progress\n",
+    "    if 'inProgress' in contents:\n",
+    "        print(subfolder, 'In Progress')\n",
+    "        continue\n",
+    "        \n",
     "    # A folder is considered complete if it contains a bighitlist.txt and a smallhitlist.txt\n",
     "    complete = 'bighitlist.txt' in contents and 'smallhitlist.txt' in contents\n",
     "    \n",
@@ -81,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -94,121 +124,67 @@
     "incomplete_list.write('# Generated ' + str(datetime.datetime.now()) + '\\n')\n",
     "for inc in incomplete:\n",
     "    incomplete_list.write(inc + '\\n')\n",
+    "    \n",
     "incomplete_list.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Write list of complete ranges\n",
+    "import datetime\n",
+    "\n",
     "complete_list = open(complete_list_path, 'w')\n",
     "complete_list.write('# Generated ' + str(datetime.datetime.now()) + '\\n')\n",
     "for c in completed:\n",
-    "    complete_list.write(c + '\\n')\n",
+    "    complete_list.write(inc + '\\n')\n",
     "complete_list.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[154, 158], [164, 168], [174, 183], [184, 203], [204, 208], [224, 228], [274, 293], [334, 353], [356, 455], [556, 575], [596, 615], [616, 635], [636, 655], [696, 715], [716, 735], [736, 755]]\n",
+      "Processing complete\n"
+     ]
+    }
+   ],
    "source": [
-    "# concatenate_files based on https://stackoverflow.com/a/13613375/8706910\n",
-    "def concatenate_files(files, output_file):\n",
-    "    with open(output_file, 'w', encoding='utf-8') as output:\n",
-    "        for file in files:\n",
-    "            with open(file, encoding='utf-8') as input_file:\n",
-    "                for line in input_file:\n",
-    "                    output.write(line)\n",
-    "                    \n",
-    "def results_folder_to_range(folder_name):\n",
-    "    start, end = folder_name.split('_')[1].split('-')\n",
-    "    return int(start), int(end)\n",
+    "#Write list of GDrive IDs for files in incomplete\n",
+    "#Assume that all files in each incomplete range have failed to be processed\n",
+    "allFilePath = '/global/scratch/groups/dh/aanderson/all_files.txt'\n",
+    "incompleteRangeIDPath = '/global/scratch/groups/dh/aanderson/incompleteID.txt'\n",
+    "incompleteRangeList = open(incomplete_list_path, \"r\").read().split('\\n') \n",
+    "incompleteRanges = [] #Tuples of numbers\n",
     "\n",
-    "import os\n",
-    "import sys\n",
-    "import errno\n",
     "\n",
-    "# dir-create copied from AdamAndersonFindSumerianWorkflow\n",
-    "def dir_create(path):\n",
-    "    try:\n",
-    "        os.makedirs(path)\n",
-    "    except OSError as exception:\n",
-    "        if exception.errno != errno.EEXIST:\n",
-    "            raise\n",
-    "        else:\n",
-    "            print('Folder at: ' + path + ' already exists. Skipping...')\n",
+    "for incompleteRange in incompleteRangeList[1:len(incompleteRangeList)-1]: #First line is a log, last line is EOF?\n",
+    "    incompleteRanges.append([int(s) for s in incompleteRange.split('_')[1].split('-')])\n",
+    "    \n",
+    "print(incompleteRanges)\n",
+    "allFiles = open(allFilePath, \"rt\", encoding='utf-8').read().split('\\n')\n",
+    "incompleteRangeFile = open(incompleteRangeIDPath, \"w+\")\n",
+    "for incompleteRange in incompleteRanges:\n",
+    "    for index in range(incompleteRange[0]-1, incompleteRange[1]):\n",
+    "        incompleteRangeFile.write(allFiles[index].split(';')[-1].strip('\\n'))\n",
+    "        incompleteRangeFile.write(\"\\n\")\n",
     "\n",
-    "import shutil\n",
-    "# Merge all consecutive completed ranges into a single range\n",
-    "for completed_range in consecutive_completed_ranges:\n",
-    "    start_index = None\n",
-    "    end_index = None\n",
-    "    for folder in completed_range:\n",
-    "        start, end = results_folder_to_range(folder)\n",
-    "        start_index = start if start_index == None else min(start_index, start)\n",
-    "        end_index = end if end_index == None else max(end_index, end)\n",
-    "    \n",
-    "    smallhits_paths = [ results_folder + folder + '/smallhitlist.txt' for folder in completed_range ]\n",
-    "    bighits_paths = [ results_folder + folder + '/bighitlist.txt' for folder in completed_range ]\n",
-    "    \n",
-    "    merge_folder = results_folder + 'Results_' + str(start_index) + '-' + str(end_index)\n",
-    "    dir_create(merge_folder)\n",
-    "    concatenate_files(smallhits_paths, merge_folder + '/smallhitlist.txt')\n",
-    "    concatenate_files(bighits_paths, merge_folder + '/bighitlist.txt')\n",
-    "    print('Merged Range', start_index, end_index)\n",
-    "    \n",
-    "    # Move old folders to achive\n",
-    "    for folder in completed_range:\n",
-    "        shutil.move(results_folder + folder, results_archive_folder)\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# If a range is large enough, upload Google drive\n",
-    "# Added by Nicolas Chan based on previous code, 10/12/2017\n",
-    "def upload_txt_file(name, path, destination_folder=None):\n",
-    "    \"\"\"Upload a text file to Google Drive\"\"\"\n",
-    "    \n",
-    "    file_metadata = { 'name': name }\n",
-    "    if destination_folder:\n",
-    "        file_metadata['parents'] = [destination_folder]\n",
-    "    media = MediaFileUpload(path, mimetype='text/plain')\n",
-    "    file = service.files().create(\n",
-    "        body=file_metadata,\n",
-    "        media_body=media,\n",
-    "        fields='id'\n",
-    "    ).execute()\n",
-    "    print('Uploaded', name, '; ID:', file.get('id'))\n",
-    "\n",
-    "results_folders = sorted(listdir(results_folder))\n",
-    "for folder in results_folders:\n",
-    "    contents = listdir(results_folder + '/' + subfolder)\n",
-    "    # A folder is considered complete if it contains a bighitlist.txt and a smallhitlist.txt\n",
-    "    complete = 'bighitlist.txt' in contents and 'smallhitlist.txt' in contents\n",
-    "    if not complete:\n",
-    "        continue\n",
-    "    start, end = results_folder_to_range(folder)\n",
-    "    size = start - end + 1\n",
-    "    if size >= upload_threshold:\n",
-    "        upload_txt_file('smallhitlist.txt', runFolder + 'smallhitlist.txt', google_folder)\n",
-    "        upload_txt_file('bighitlist.txt', runFolder + 'bighitlist.txt', google_folder)"
+    "#Cleanup\n",
+    "incompleteRangeFile.close()\n",
+    "print(\"Processing complete\")"
    ]
   },
   {
